// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tenure-investigation-view it renders NewTenancy view correctly for state=HOApprovalPassed 1`] = `
<div>
  <div
    data-testid="changeofname-new-tenancy-view"
  >
    <h2
      class="lbh-heading-h2"
    >
      Change of name application approved, next steps:
    </h2>
    <p
      class="lbh-body-m"
    >
      You must make an office appointment with the applicant to sign a new tenancy agreement
    </p>
    <p
      class="lbh-body-s"
    >
      Haylee Macejkovic
       contact details:
    </p>
    <p
      class="lbh-body-s"
    >
      Phone:
      <span
        style="margin-left: 1em;"
      >
        075949281
      </span>
    </p>
    <p
      class="lbh-body-s"
    >
      Email:
      <span
        style="margin-left: 1em;"
      >
        Gay.Jacobi@hotmail.com
      </span>
    </p>
    <form
      action="#"
      class="request-appointment-form"
      id="request-appointment-form"
      novalidate=""
    >
      <div
        class="govuk-form-group lbh-form-group"
        id="appointment-form-date-time-form-group"
      >
        <label
          class="govuk-label lbh-label"
          for="appointment-form-date-time-form-group-field"
        >
          
        </label>
        <div
          class="govuk-form-group lbh-form-group"
          id="appointment-form-date-time-field-form-group"
          style="display: flex; flex-wrap: wrap; align-items: flex-end; margin-top: 0px;"
        >
          <label
            class="govuk-label lbh-label"
            for="appointment-form-date-time-field-form-group-field"
          >
            
          </label>
          <fieldset
            class="govuk-form-group lbh-form-group mtfh-appointment-form__date"
            id="appointment-form-date"
            style="flex: 1 1 280px;"
          >
            <legend
              class="govuk-label lbh-label"
              for="appointment-form-date-field"
            >
              Date
              <sup
                aria-hidden="true"
              >
                *
              </sup>
            </legend>
            <div
              class="govuk-date-input lbh-date-input"
            >
              <div
                class="govuk-date-input__item"
              >
                <label
                  class="govuk-label lbh-label"
                  for="appointment-form-date-field-day"
                />
                <input
                  aria-label="Day"
                  aria-valuemax="31"
                  aria-valuemin="1"
                  class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
                  name="day"
                  placeholder="dd"
                  required=""
                  role="spinbutton"
                  value=""
                />
              </div>
              <div
                class="govuk-date-input__item"
              >
                <label
                  class="govuk-label lbh-label"
                  for="appointment-form-date-field-month"
                />
                <input
                  aria-label="Month"
                  aria-valuemax="12"
                  aria-valuemin="1"
                  class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
                  name="month"
                  placeholder="mm"
                  required=""
                  role="spinbutton"
                  value=""
                />
              </div>
              <div
                class="govuk-date-input__item"
              >
                <label
                  class="govuk-label lbh-label"
                  for="appointment-form-date-field-year"
                />
                <input
                  aria-label="Year"
                  class="govuk-input lbh-input govuk-input govuk-date-input__input govuk-input--width-4"
                  name="year"
                  placeholder="yyyy"
                  required=""
                  role="spinbutton"
                  value=""
                />
              </div>
            </div>
          </fieldset>
          <fieldset
            class="govuk-form-group lbh-form-group mtfh-appointment-form__time"
            id="appointment-form-time"
            style="flex: 1 1 280px;"
          >
            <legend
              class="govuk-label lbh-label"
              for="appointment-form-time-field"
            >
              Time
              <sup
                aria-hidden="true"
              >
                *
              </sup>
            </legend>
            <div
              class="govuk-date-input lbh-date-input"
            >
              <div
                class="govuk-date-input__item"
              >
                <label
                  class="govuk-label lbh-label"
                  for="appointment-form-time-field-hour"
                />
                <input
                  aria-label="Hour"
                  aria-valuemax="12"
                  aria-valuemin="0"
                  class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
                  name="hour"
                  placeholder="00"
                  required=""
                  role="spinbutton"
                  value=""
                />
              </div>
              <div
                class="govuk-date-input__item"
              >
                <label
                  class="govuk-label lbh-label"
                  for="appointment-form-time-field-minute"
                />
                <input
                  aria-label="Minute"
                  aria-valuemax="59"
                  aria-valuemin="0"
                  class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
                  name="minute"
                  placeholder="00"
                  required=""
                  role="spinbutton"
                  value=""
                />
              </div>
              <div
                class="govuk-date-input__item"
              >
                <label
                  class="govuk-label lbh-label"
                  for="appointment-form-time-field-amPm"
                />
                <select
                  aria-label="AM/PM"
                  class="govuk-select lbh-select"
                  id="amPm"
                  name="amPm"
                >
                  <option
                    value=""
                  >
                    AM/PM
                  </option>
                  <option
                    value="am"
                  >
                    AM
                  </option>
                  <option
                    value="pm"
                  >
                    PM
                  </option>
                </select>
              </div>
            </div>
          </fieldset>
        </div>
      </div>
      <button
        class="govuk-button lbh-button"
        disabled=""
        style="width: 222px;"
        type="submit"
      >
        Continue
      </button>
    </form>
  </div>
</div>
`;

exports[`tenure-investigation-view it renders NewTenancy view correctly for state=TenureAppointmentScheduled 1`] = `
<div>
  <div
    data-testid="changeofname-new-tenancy-view"
  >
    <h2
      class="lbh-heading-h2"
    >
      Change of name application approved, next steps:
    </h2>
    <div
      class="mtfh-box"
    >
      <div
        class="mtfh-status-heading"
      >
        <svg
          fill="none"
          height="45"
          viewBox="0 0 45 45"
          width="45"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="22.5"
            cy="22.5"
            fill="white"
            r="21.75"
            stroke="#0B0C0C"
            stroke-width="1.5"
          />
          <path
            d="M20.2251 12.7026C20.2251 11.1991 21.0627 10.4473 22.7378 10.4473C24.4129 10.4473 25.2505 11.1991 25.2505 12.7026C25.2505 13.4191 25.0386 13.9792 24.6147 14.3828C24.201 14.7764 23.5754 14.9731 22.7378 14.9731C21.0627 14.9731 20.2251 14.2163 20.2251 12.7026ZM25.0386 34H20.4219V17.0771H25.0386V34Z"
            fill="#0B0C0C"
          />
        </svg>
        <h4
          class="lbh-heading-h4 mtfh-status-heading__title"
        >
          Office appointment scheduled
        </h4>
      </div>
      <p
        class="lbh-body-m"
        style="margin-left: 60px;"
      >
        Date: 
        Monday 12th October 2099
        <br />
        Time: 
        08:59 am
      </p>
      <button
        class="govuk-link lbh-link"
        style="margin-left: 60px;"
        type="button"
      >
        Change
      </button>
    </div>
    <button
      class="govuk-button lbh-button"
      disabled=""
      type="button"
    >
      Documents signed
    </button>
  </div>
</div>
`;

exports[`tenure-investigation-view it renders TenureInvestigation view correctly for state=TenureAppointmentRescheduled 1`] = `
<div>
  <div
    data-testid="changeofname-new-tenancy-view"
  >
    <h2
      class="lbh-heading-h2"
    >
      Change of name application approved, next steps:
    </h2>
    <div
      class="mtfh-box"
    >
      <div
        class="mtfh-status-heading"
      >
        <svg
          fill="none"
          height="45"
          viewBox="0 0 45 45"
          width="45"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="22.5"
            cy="22.5"
            fill="white"
            r="21.75"
            stroke="#0B0C0C"
            stroke-width="1.5"
          />
          <path
            d="M20.2251 12.7026C20.2251 11.1991 21.0627 10.4473 22.7378 10.4473C24.4129 10.4473 25.2505 11.1991 25.2505 12.7026C25.2505 13.4191 25.0386 13.9792 24.6147 14.3828C24.201 14.7764 23.5754 14.9731 22.7378 14.9731C21.0627 14.9731 20.2251 14.2163 20.2251 12.7026ZM25.0386 34H20.4219V17.0771H25.0386V34Z"
            fill="#0B0C0C"
          />
        </svg>
        <h4
          class="lbh-heading-h4 mtfh-status-heading__title"
        >
          Office appointment missed
        </h4>
      </div>
      <p
        class="lbh-body-m"
        style="margin-left: 60px;"
      >
        Date:
         
        Tuesday 12th October 2010
        <br />
        Time:
         
        08:59 am
      </p>
    </div>
    <div
      class="mtfh-box"
    >
      <div
        class="mtfh-status-heading"
      >
        <svg
          fill="none"
          height="45"
          viewBox="0 0 45 45"
          width="45"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="22.5"
            cy="22.5"
            fill="white"
            r="21.75"
            stroke="#0B0C0C"
            stroke-width="1.5"
          />
          <path
            d="M20.2251 12.7026C20.2251 11.1991 21.0627 10.4473 22.7378 10.4473C24.4129 10.4473 25.2505 11.1991 25.2505 12.7026C25.2505 13.4191 25.0386 13.9792 24.6147 14.3828C24.201 14.7764 23.5754 14.9731 22.7378 14.9731C21.0627 14.9731 20.2251 14.2163 20.2251 12.7026ZM25.0386 34H20.4219V17.0771H25.0386V34Z"
            fill="#0B0C0C"
          />
        </svg>
        <h4
          class="lbh-heading-h4 mtfh-status-heading__title"
        >
          Office appointment scheduled
        </h4>
      </div>
      <p
        class="lbh-body-m"
        style="margin-left: 60px;"
      >
        Date: 
        Monday 12th October 2099
        <br />
        Time: 
        08:59 am
      </p>
      <button
        class="govuk-link lbh-link"
        style="margin-left: 60px;"
        type="button"
      >
        Change
      </button>
    </div>
    <button
      class="govuk-button lbh-button"
      disabled=""
      type="button"
    >
      Documents signed
    </button>
  </div>
</div>
`;
